--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
