--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.10",
     "install": "^0.13.0",
     "react": "^17.0.2",
